# Pivot

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/pivot/: __init__.py  __main__.py  change_detection.py  cli.py  config.py  pipeline.py  repository.py  state.py
tests/: __init__.py  conftest.py  test_change_detection.py  test_cli.py  test_config.py  test_pipeline.py  test_repository.py  test_version.py
